Get something up and running! lots TBD

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "stylus": "*",
     "dustjs-linkedin": "*",
     "dustjs-helpers": "*",
-    "consolidate": "*"
+    "consolidate": "*",
+    "twit": "*",
+    "querystring": "*"
   }
 }
